// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should render RoundButton with all props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
      },
      Object {
        "marginTop": 20,
      },
    ]
  }
>
  <ForwardRef
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "shadowColor": "rgba(0,0,0, .4)",
        "shadowOffset": Object {
          "height": 1,
          "width": 1,
        },
        "shadowOpacity": 20,
        "shadowRadius": 5,
        "width": 50,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
        }
      }
    >
      🎶
    </Text>
  </ForwardRef>
  <Text
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    Button
  </Text>
</View>
`;

exports[`Snapshots should render RoundButton with just necessary props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
      },
      undefined,
    ]
  }
>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "shadowColor": "rgba(0,0,0, .4)",
        "shadowOffset": Object {
          "height": 1,
          "width": 1,
        },
        "shadowOpacity": 20,
        "shadowRadius": 5,
        "width": 50,
      }
    }
  />
</View>
`;
